[gd_scene load_steps=10 format=3 uid="uid://bb5elcfnell1c"]

[ext_resource type="Script" path="res://scène/Menu/game_over_hud.gd" id="1_ca1qm"]
[ext_resource type="Texture2D" uid="uid://dep70bww2euwf" path="res://asset/Fond/ChatGPT Image 2 août 2025, 18_04_39.png" id="1_o8gce"]
[ext_resource type="Texture2D" uid="uid://cgt2blqpmnoab" path="res://asset/Bouttons/retry.png" id="2_ri1ds"]
[ext_resource type="Texture2D" uid="uid://7mgjm6gr63ef" path="res://asset/Bouttons/retry-press.png" id="3_6cdcn"]
[ext_resource type="Script" path="res://scène/Menu/Quit.gd" id="4_d1q5e"]
[ext_resource type="Texture2D" uid="uid://bdid67uar6mq8" path="res://asset/Bouttons/quit.png" id="4_pdsre"]
[ext_resource type="Texture2D" uid="uid://go0ficwtcvy6" path="res://asset/Bouttons/quit-press.png" id="5_e3wce"]
[ext_resource type="FontFile" uid="uid://yde3i3gpuehn" path="res://asset/Fonts/BitcountPropDouble-VariableFont_CRSV,ELSH,ELXP,slnt,wght.ttf" id="7_3jktw"]
[ext_resource type="Script" path="res://scène/Menu/Restart.gd" id="7_j3i73"]

[node name="GameOverHud" type="CanvasLayer"]
script = ExtResource("1_ca1qm")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
z_index = 1
anchors_preset = -1
anchor_left = 0.399
anchor_top = 0.767
anchor_right = 0.625
anchor_bottom = 0.997
offset_left = 0.35199
offset_top = -0.0160217
offset_bottom = -0.0560303

[node name="Quit" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture_normal = ExtResource("2_ri1ds")
texture_pressed = ExtResource("3_6cdcn")
script = ExtResource("4_d1q5e")

[node name="Restart" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
texture_normal = ExtResource("4_pdsre")
texture_pressed = ExtResource("5_e3wce")
script = ExtResource("7_j3i73")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(571, 267)
scale = Vector2(1.71314, 1.2308)
texture = ExtResource("1_o8gce")

[node name="FinalScoreLabel" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.453
anchor_top = 0.71
anchor_right = 0.665
anchor_bottom = 0.787
offset_left = 0.143982
offset_top = -0.0800171
offset_right = -122.08
offset_bottom = -24.976
scale = Vector2(2, 2)
theme_override_fonts/font = ExtResource("7_3jktw")

[connection signal="button_down" from="HBoxContainer/Quit" to="HBoxContainer/Quit" method="_on_button_down"]
[connection signal="button_up" from="HBoxContainer/Quit" to="HBoxContainer/Quit" method="_on_button_up"]
[connection signal="pressed" from="HBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="HBoxContainer/Quit" to="HBoxContainer/Quit" method="_on_pressed"]
[connection signal="button_down" from="HBoxContainer/Restart" to="HBoxContainer/Restart" method="_on_button_down"]
[connection signal="button_up" from="HBoxContainer/Restart" to="HBoxContainer/Restart" method="_on_button_up"]
[connection signal="pressed" from="HBoxContainer/Restart" to="." method="_on_restart_pressed"]
